// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`comments error 1`] = `
<div>
  <p>
    Comments are subject to our community guidelines, which can be viewed
     
    <a>
      here
    </a>
    .
  </p>
  <div />
</div>
`;

exports[`disabled comments 1`] = `
<div>
  <p>
    Comments for this article have been turned off
  </p>
  <p>
    Comments are subject to our community guidelines, which can be viewed
     
    <a>
      here
    </a>
    .
  </p>
</div>
`;

exports[`enabled comments 1`] = `
<div>
  <p>
    Comments are subject to our community guidelines, which can be viewed
     
    <a>
      here
    </a>
    .
  </p>
  <div />
</div>
`;

exports[`single comment 1`] = `
<div>
  <p>
    Comments are subject to our community guidelines, which can be viewed
     
    <a>
      here
    </a>
    .
  </p>
  <div />
</div>
`;

exports[`zero comments 1`] = `
<div>
  <p>
    Comments are subject to our community guidelines, which can be viewed
     
    <a>
      here
    </a>
    .
  </p>
  <div />
</div>
`;
